Finished planning_modifications module

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ page_title }}Intranet SALS</title>
-    <link rel="stylesheet" href="//localhost/inc/css/style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
