Updating "A propos" text. thanks Evrard :) And changing page title

--- a/base/templates/about.html
+++ b/base/templates/about.html
@@ -4,11 +4,26 @@
 <div class="container">
     <h4>A propos</h4>
     <p>
-        Donec quis odio a urna vehicula molestie. Nunc rutrum tincidunt dui. 
-        Nunc et mollis tellus, vitae convallis purus. Curabitur elementum eget metus sit amet lacinia. 
-        Pellentesque sagittis placerat vestibulum. Duis dictum porttitor est, convallis ultrices nunc elementum auctor. 
-        Vivamus accumsan placerat justo vel semper. Pellentesque tellus nunc, egestas ut luctus quis, pellentesque tempus risus. 
-        Nullam aliquet tristique justo. 
+        Bonjour, vous êtes sur la page à propos. Vous avez déjà lu une page à propos ? Nous, non. Pour que tu reste quand même jusqu’à la fin, on t’offre un Kinder Bueno. Tu en salive ?
+    </p>
+    <p>
+        C’est un projet ICN, nouvel enseignement d’exploration de seconde décidé par notre cher gouvernement.
+        On a eu v’la les idée : une IA (tu comprend si tu as vus le dernier Terminator), un GPS ultra cool, …
+        Et puis après on a reflechi. On c’est rabâché sur un intranet.
+        C’est mieux en fin de compte : on aurait eu plus de chance de d'aboutir en jouant au loto chaque jour pendant 1 an et de s’en servir pour payé des petits génies que de le faire vraiment.
+        Bon, donc après avoir pris notre choix sur le projet, et bien… on devait trouver quoi y mettre.
+        Alors là tu peut te dire que c’est facile d’avoir des idées, mais vu qu’on y a passé 2 mois sur 6, alors imaginé pour Google+.
+        Et c’est là que la programmation commence.
+    </p>
+    <p>
+        Donc, après de court cours de programmation en python, nous voila lâché.
+        Débrouillez vous ! Heureusement que on a un connaisseur dans notre équipe, sinon on serait mort.
+        Bon, passons les détails sur Django, les algorithmes de questions,.... Beaucoup vont s’endormir.
+        Parlons plutôt de la répartition du travail, et de l’ambiance. Je ne sais pas pour les autres groupes, mais nous c’était plutôt cool.
+        Donc pas de panique, c’est pas ennuyant et en silence.
+        Et si malgré tous on s'ennuyait, le uselessweb nous a sauvé ( très bon site d’ailleurs).
+        Au bout de 3 mois de programmation, c'était terminée. Imaginé, on a tapé la dernière ligne tous ensemble, et fêté ça avec des buenos, me rappelant au passage que je vous en doit un.
+        Si vous pouvez faire 6-3-2, vous savez donc qu’il y a encore un mois qui reste.
     </p>
     <h5>Contributeurs :</h5>
     <ul>
