Adding contributor list

--- a/base/templates/about.html
+++ b/base/templates/about.html
@@ -27,8 +27,11 @@
     </p>
     <h5>Contributeurs :</h5>
     <ul>
-        <li>- Multim </li>
-        <li>- Maxime</li>
+        <li>- Anquetil Evrard</li>
+        <li>- Bossard Louis le Magnfique</li>
+        <li>- Marot Maxime</li>
+        <li>- Ros Lilian</li>
+        <li>- Vandermeersch Mathias</li>
     </ul>
 </div>
 
