--- a/base/templates/home.html
+++ b/base/templates/home.html
@@ -22,14 +22,16 @@
                         <a href="{% url 'missing:missing' %}">Plus d'infos</a>
                     </div>
                 </div>
+                {% comment "TODO" %}
                 <div class="card blue-grey darken-1 hoverable">
                     <div class="card-content white-text">
                         <span class="card-title"><i class="small material-icons">question_answer</i> Informations partagés</span>
                     </div>
                     <div class="card-action">
-                        <a href="{#{% url 'question:stack' %}#}">Plus</a>
+                        <a href="{% url 'question:stack' %}">Plus</a>
                     </div>
                 </div>
+
                 <div class="card blue-grey darken-1 hoverable">
                     <div class="card-content white-text">
                         <span class="card-title"><i class="small material-icons">today</i> Agenda</span>
@@ -38,6 +40,7 @@
                         <a href="{#{% url 'schedule:events' %}#}">Plus d'évennements</a>
                     </div>
                 </div>
+
                 <div class="card blue-grey darken-1 hoverable">
                     <div class="card-content white-text">
                         <span class="card-title"><i class="small material-icons">local_dining</i> Aujourd'hui au self</span>
@@ -46,9 +49,11 @@
                         <a href="{#{% url 'self:weekmenu' %}#}">Afficher pour la semaine</a>
                     </div>
                 </div>
+                {% endcomment %}
             </div>
             <!-- LEFT COLUMN -->
             <div class="col s12 m6">
+                {% comment "TODO" %}
                 <div class="card blue-grey darken-1 hoverable">
                     <div class="card-content white-text">
                         <span class="card-title"><i class="small material-icons">library_books</i> Actualités</span>
@@ -61,6 +66,7 @@
                         <a href="{#{% url 'articles:articles' %}#}">Plus d'articles</a>
                     </div>
                 </div>
+                {% endcomment %}
                 <div class="card blue-grey darken-1 hoverable">
                     <div class="card-content white-text">
                         <span class="card-title"><i class="small material-icons">schedule</i> Modification de planning</span>
