Fixing link on panning_modifications

--- a/base/templates/home.html
+++ b/base/templates/home.html
@@ -90,7 +90,7 @@
                         {% endif %}
                     </div>
                     <div class="card-action">
-                        <a href="{#{% url 'planning:planning' %}#}">Plus d'info</a>
+                        <a href="{% url 'planning_modifications:modifications' %}">Plus d'info</a>
                     </div>
                 </div>
             </div>
