Update about footer link and new style for admin backend

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -39,7 +39,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                <a class="grey-text text-lighten-4" href="{% url 'base:about' %}">© 2016 Saint Aubin La Salle</a>
+                <a class="grey-text text-lighten-4" href="{% url 'base:about' %}">A propos</a>
             </div>
         </div>
     </footer>
